Added Flickr photo line 136

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a data-flickr-embed="true" href="https://www.flickr.com/photos/tomfenskephotography/25928531530/in/photolist-Fvdv65-9dVPAv-SY9dJX-243XvsP-kP1vmL-hMHRix-byqYkn-6YT4we-6XUruR-nVvXMD-iTTpdd-kHR6ks-jxbSXz-htM4ub-Kf7ZBd-jFTTsL-v1uYQe-o2yZhQ-m5YMX9-byoGry-hAH87V-mBUYiR-cb7AmU-RaPJ8e-wzAdap-w19xnP-kFXB1Q-87JHbX-94GzFs-8PZv2n-oW8UFH-nsbYWs-gm7uHA-rTx67V-4cVRCz-9EtDLR-nmmbQt-99hbZV-CexxSq-oyq1h9-autfBp-KERyLe-p4r2dE-9tDLJf-nueqSt-85L3qP-9xGAtQ-rTAD72-9ntNgN-nayVec" title="Water"><img src="https://live.staticflickr.com/1530/25928531530_224f79e1a3_5k.jpg" width="4928" height="3264" alt="Water"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
               <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
           </li>
