Added logo line 59

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ Replace the header contents:
 - replace 'Name of Site' with a new site name
 -->
 
-    <header>          
-      <img src="https://www.flickr.com/photos/162833611@N04/shares/s2H721" width="100" align="right" height="100" alt="AD_monogram">
+    <header>
+      <a data-flickr-embed="true" href="https://www.flickr.com/photos/162833611@N04/49088261217/in/dateposted-public/" title="Alpha Design"><img src="https://live.staticflickr.com/65535/49088261217_734fa47edb_c.jpg" width="800" height="800" alt="Alpha Design"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
       <h1>Firstname Lastname's Name of Site</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
