--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>
-      <a data-flickr-embed="true" href="https://www.flickr.com/photos/162833611@N04/49088261217/in/dateposted-public/" title="Alpha Design"><img src="https://live.staticflickr.com/65535/49088261217_734fa47edb_c.jpg" width="800" height="800" alt="Alpha Design"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+      <a href="https://imgur.com/59eHy6g"><img src="https://i.imgur.com/59eHy6g.png" title="source: imgur.com" /></a>
       <h1>Firstname Lastname's Name of Site</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
