--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>
-      <a href="https://imgur.com/59eHy6g"><img src="https://i.imgur.com/59eHy6g.png" title="source: imgur.com" /></a>
+      <img src="https://imgur.com/59eHy6g"><img src="https://i.imgur.com/59eHy6g.png" width="100" align="right" height="100" alt="KH_monogram">
       <h1>Firstname Lastname's Name of Site</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
